@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Exception::WrongNumberOfParameters::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Exception::WrongNumberOfParameters::VERSION   = '0.009_07';
+	$Type::Exception::WrongNumberOfParameters::VERSION   = '0.010';
 }
 
 use base "Type::Exception";
