@@ -6,7 +6,7 @@ use warnings;
 
 BEGIN {
 	$Type::Tiny::Duck::AUTHORITY = 'cpan:TOBYINK';
-	$Type::Tiny::Duck::VERSION   = '0.009_07';
+	$Type::Tiny::Duck::VERSION   = '0.010';
 }
 
 use Scalar::Util qw< blessed >;
