@@ -650,3 +650,9 @@
 		item "If a Type::Tiny object is instantiated with a Sub::Quote quoted constraint coderef, and no inlined coderef, then Type::Tiny will use Sub::Quote to make an inlined coderef."^^Change;
 	].
 
+`Type-Tiny 0.010 cpan:TOBYINK`
+	issued  2013-06-24;
+	changeset [
+		dcs:versus `Type-Tiny 0.009_07 cpan:TOBYINK`;
+		item "Updated NEWS file."^^Documentation;
+	].
